// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a dev ingress 1`] = `
Object {
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": Object {
    "annotations": Object {
      "kubernetes.io/ingress.class": "nginx",
    },
    "labels": Object {
      "app": "my-ingress",
    },
    "name": "my-ingress",
  },
  "spec": Object {
    "rules": Array [
      Object {
        "host": "sample.dev2.fabrique.social.gouv.fr",
        "http": Object {
          "paths": Array [
            Object {
              "backend": Object {
                "service": Object {
                  "name": "www",
                  "port": Object {
                    "name": "http",
                  },
                },
              },
              "path": "/",
              "pathType": "Prefix",
            },
          ],
        },
      },
    ],
    "tls": Array [
      Object {
        "hosts": Array [
          "sample.dev2.fabrique.social.gouv.fr",
        ],
        "secretName": "wildcard-crt",
      },
    ],
  },
}
`;

exports[`should create a prod ingress 1`] = `
Object {
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": Object {
    "annotations": Object {
      "cert-manager.io/cluster-issuer": "letsencrypt-prod",
      "kubernetes.io/ingress.class": "nginx",
      "kubernetes.io/tls-acme": "true",
    },
    "labels": Object {
      "app": "my-ingress",
    },
    "name": "my-ingress",
  },
  "spec": Object {
    "rules": Array [
      Object {
        "host": "sample.dev2.fabrique.social.gouv.fr",
        "http": Object {
          "paths": Array [
            Object {
              "backend": Object {
                "service": Object {
                  "name": "www",
                  "port": Object {
                    "name": "http-foo",
                  },
                },
              },
              "path": "/",
              "pathType": "Prefix",
            },
          ],
        },
      },
    ],
    "tls": Array [
      Object {
        "hosts": Array [
          "sample.dev2.fabrique.social.gouv.fr",
        ],
        "secretName": "my-ingress-crt",
      },
    ],
  },
}
`;

exports[`should create an ingress with multiple hosts 1`] = `
Object {
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": Object {
    "annotations": Object {
      "kubernetes.io/ingress.class": "nginx",
    },
    "labels": Object {
      "app": "my-ingress",
    },
    "name": "my-ingress",
  },
  "spec": Object {
    "rules": Array [
      Object {
        "host": "sample.dev2.fabrique.social.gouv.fr",
        "http": Object {
          "paths": Array [
            Object {
              "backend": Object {
                "service": Object {
                  "name": "www",
                  "port": Object {
                    "name": "http-foo",
                  },
                },
              },
              "path": "/",
              "pathType": "Prefix",
            },
          ],
        },
      },
      Object {
        "host": "www.sample.dev2.fabrique.social.gouv.fr",
        "http": Object {
          "paths": Array [
            Object {
              "backend": Object {
                "service": Object {
                  "name": "www",
                  "port": Object {
                    "name": "http-foo",
                  },
                },
              },
              "path": "/",
              "pathType": "Prefix",
            },
          ],
        },
      },
    ],
    "tls": Array [
      Object {
        "hosts": Array [
          "sample.dev2.fabrique.social.gouv.fr",
          "www.sample.dev2.fabrique.social.gouv.fr",
        ],
        "secretName": "wildcard-crt",
      },
    ],
  },
}
`;
